[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/gadgets/drillbot/DrillbotHandlingTutorial.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/drillbot/tutpic3.png" type="Texture" id=2]
[ext_resource path="res://gui/buttons/Action.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/theme.tres" type="Theme" id=4]

[node name="Drillbert2Tutorial" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -545.0
margin_top = -146.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 4 )
script = ExtResource( 1 )
moveOutAfter = 25.0
moveInDelay = 1.0
listeningDelay = 60.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 529.0
margin_bottom = 130.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 501.0
margin_bottom = 102.0

[node name="Image" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 90.0
rect_min_size = Vector2( 128, 56 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 489.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 25.0
size_flags_horizontal = 0

[node name="Label1" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Action" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 25.0
action = "pickup"

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 32.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 32.0
margin_bottom = 66.0
size_flags_horizontal = 0

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="Action" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 25.0
action = "keeper_use"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_right = 32.0
margin_bottom = 25.0
size_flags_horizontal = 3
